--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon js/server.js"
+    "start": "nodemon --ext html,js,css js/server.js"
   },
   "keywords": [],
   "author": "",
