--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/express": "^4.17.7",
     "@types/morgan": "^1.9.1",
     "@types/mqtt": "^2.5.0",
+    "@types/mysql": "^2.15.15",
     "@types/node": "^14.0.23",
     "@types/nunjucks": "^3.1.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "mqtt": "^4.1.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "nunjucks": "^3.2.1",
     "ts-node": "^8.10.2",
