--- a/ts/script/tsconfig.json
+++ b/ts/script/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
     "strict": true,
-    "module": "CommonJS",
-    "moduleResolution": "node",
+    "module": "amd",
+    "moduleResolution": "classic",
     "target": "es6",
-    "outDir": "js",
+    "rootDir": "",
+    "outDir": "../../js/script",
     "sourceMap": true,
     "removeComments": true
   },
   "exclude": [
-    "node_modules"
+    "../../node_modules"
   ]
 }
