--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/morgan": "^1.9.1",
     "@types/mqtt": "^2.5.0",
@@ -17,6 +18,7 @@
     "@types/node": "^14.0.23",
     "@types/nunjucks": "^3.1.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "mqtt": "^4.1.0",
