--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mqtt": "^2.5.0",
     "@types/mysql": "^2.15.15",
     "@types/node": "^14.0.23",
+    "@types/node-telegram-bot-api": "^0.50.2",
     "@types/nunjucks": "^3.1.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "morgan": "^1.10.0",
     "mqtt": "^4.1.0",
     "mysql": "^2.18.1",
+    "node-telegram-bot-api": "^0.50.0",
     "nodemon": "^2.0.4",
     "nunjucks": "^3.2.1",
     "ts-node": "^8.10.2",
